VP 10.3.0 Changelog
------------------------
- using the built-in DMD (via the flasher element) now in addition will respect the 'Additive Blend' and 'Modulate' parameters to steer the blending with the table
  (this can for example be used to simulate a reflection on the playfield glass, set 'Modulate' to 0.9 and check 'Additive Blend' as an example)

- add NFAA post processing filter to the FXAA dropdown menus (sometimes more blurry, but also keeps more dynamic range of the highlights compared to FXAA, and is pretty fast)

- own colors can now be defined for locked/unlocked selected elements, element fill color and editor table background, in the editor preferences

- sound manager, image manager and script editor save and restore window position and size

- Image Manager: new column added to show if an image is in use

- add Win32++ framework to simplify UI handling (more infos under https://sourceforge.net/projects/win32-framework )

- change AntiFriction to Damping for the gate and spinner elements (which also changes the input range from 0..100 to 0..1, and is inverse to before, e.g. Damping="1-AntiFriction/100")
  (old tables will still load/save exactly the same though, as it was always used like this internally anyway)

- slightly tweak bloom filter and light transmission filter to capture a larger radius (for very bright lights)

- remove Visual Studio 2008 support
- add Visual Studio 2017 support

- DirectX 8 port for input handling (currently disabled)

VP 10.2.1 Changelog
------------------------

- fix for camera/light tweaking mode not updating lighting parameters

VP 10.2.0 Changelog
------------------------

- add -Help (displays all command line parameters) and -DisableTrueFullscreen (force disables/overrides the true fullscreen video preference) to command line

- by default open file dialog to directly select and play a table (can be changed in preferences->editor options)
