@@ -1528,39 +1528,40 @@ BEGIN
     COMBOBOX        DISPID_Image2,7,44,113,69,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "FS Image",IDC_STATIC,7,58,60,8
     COMBOBOX        DISPID_Image6,7,68,113,69,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "Test DT               DT          FS",13434,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,84,109,10
-    EDITTEXT        104,65,97,25,12,ES_AUTOHSCROLL
-    EDITTEXT        105,65,110,25,12,ES_AUTOHSCROLL
-    EDITTEXT        1040,65,123,25,12,ES_AUTOHSCROLL
-    EDITTEXT        99,65,137,25,12,ES_AUTOHSCROLL
-    EDITTEXT        100,65,151,25,12,ES_AUTOHSCROLL
-    EDITTEXT        101,65,164,25,12,ES_AUTOHSCROLL
-    EDITTEXT        IDC_TABLE_SCALEZ,65,178,25,12,ES_AUTOHSCROLL
-    EDITTEXT        102,65,192,25,12,ES_AUTOHSCROLL
-    EDITTEXT        103,65,205,25,12,ES_AUTOHSCROLL
-    EDITTEXT        110,65,218,25,12,ES_AUTOHSCROLL
-    EDITTEXT        439,95,97,25,12,ES_AUTOHSCROLL
-    EDITTEXT        440,95,110,25,12,ES_AUTOHSCROLL
-    EDITTEXT        441,95,123,25,12,ES_AUTOHSCROLL
-    EDITTEXT        442,95,137,25,12,ES_AUTOHSCROLL
-    EDITTEXT        443,95,151,25,12,ES_AUTOHSCROLL
-    EDITTEXT        444,95,164,25,12,ES_AUTOHSCROLL
-    EDITTEXT        445,95,178,25,12,ES_AUTOHSCROLL
-    EDITTEXT        446,95,192,25,12,ES_AUTOHSCROLL
-    EDITTEXT        447,95,205,25,12,ES_AUTOHSCROLL
-    EDITTEXT        448,95,218,25,12,ES_AUTOHSCROLL
-    LTEXT           "Color Grading LookupTable (256x16)",IDC_STATIC,7,238,118,9
-    COMBOBOX        1509,7,250,113,69,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "&Inclination",IDC_STATIC,7,98,55,9
-    LTEXT           "&Field of View",IDC_STATIC,7,112,55,9
-    LTEXT           "Layback",IDC_STATIC,7,125,55,8
-    LTEXT           "XY Rotation",IDC_STATIC,7,138,55,8
-    LTEXT           "&X Scale",IDC_STATIC,7,152,55,8
-    LTEXT           "&Y Scale",IDC_STATIC,7,166,55,8
-    LTEXT           "&Z Scale",IDC_STATIC,7,180,55,8
-    LTEXT           "X Offset",IDC_STATIC,7,193,55,8
-    LTEXT           "Y Offset",IDC_STATIC,7,207,55,8
-    LTEXT           "Z Offset",IDC_STATIC,7,221,55,8
+    CONTROL         "FSS mode (additional BG space)",IDC_BG_FSS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,82,109,10
+    CONTROL         "Test DT               DT          FS",13434,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,93,109,10
+    EDITTEXT        104,65,103,25,12,ES_AUTOHSCROLL
+    EDITTEXT        105,65,116,25,12,ES_AUTOHSCROLL
+    EDITTEXT        1040,65,129,25,12,ES_AUTOHSCROLL
+    EDITTEXT        99,65,143,25,12,ES_AUTOHSCROLL
+    EDITTEXT        100,65,157,25,12,ES_AUTOHSCROLL
+    EDITTEXT        101,65,170,25,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_TABLE_SCALEZ,65,184,25,12,ES_AUTOHSCROLL
+    EDITTEXT        102,65,198,25,12,ES_AUTOHSCROLL
+    EDITTEXT        103,65,211,25,12,ES_AUTOHSCROLL
+    EDITTEXT        110,65,224,25,12,ES_AUTOHSCROLL
+    EDITTEXT        439,95,103,25,12,ES_AUTOHSCROLL
+    EDITTEXT        440,95,116,25,12,ES_AUTOHSCROLL
+    EDITTEXT        441,95,129,25,12,ES_AUTOHSCROLL
+    EDITTEXT        442,95,143,25,12,ES_AUTOHSCROLL
+    EDITTEXT        443,95,157,25,12,ES_AUTOHSCROLL
+    EDITTEXT        444,95,170,25,12,ES_AUTOHSCROLL
+    EDITTEXT        445,95,184,25,12,ES_AUTOHSCROLL
+    EDITTEXT        446,95,198,25,12,ES_AUTOHSCROLL
+    EDITTEXT        447,95,211,25,12,ES_AUTOHSCROLL
+    EDITTEXT        448,95,224,25,12,ES_AUTOHSCROLL
+    LTEXT           "Color Grading LookupTable (256x16)",IDC_STATIC,7,240,118,9
+    COMBOBOX        1509,7,252,113,69,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "&Inclination",IDC_STATIC,7,104,55,9
+    LTEXT           "&Field of View",IDC_STATIC,7,118,55,9
+    LTEXT           "Layback",IDC_STATIC,7,131,55,8
+    LTEXT           "XY Rotation",IDC_STATIC,7,144,55,8
+    LTEXT           "&X Scale",IDC_STATIC,7,158,55,8
+    LTEXT           "&Y Scale",IDC_STATIC,7,172,55,8
+    LTEXT           "&Z Scale",IDC_STATIC,7,186,55,8
+    LTEXT           "X Offset",IDC_STATIC,7,199,55,8
+    LTEXT           "Y Offset",IDC_STATIC,7,213,55,8
+    LTEXT           "Z Offset",IDC_STATIC,7,227,55,8
     CONTROL         "Enable EMReels",13432,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,269,60,10
     CONTROL         "Enable Decals",13433,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,69,269,53,10
     EDITTEXT        1045,80,284,40,12,ES_AUTOHSCROLL
